Changed colour of submit record action buttons
- Removed unused comments and file

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -99,7 +99,7 @@
     <link href="/static/assets/css/base_banner.css" rel="stylesheet" />
 
     <!-- General colours -->
-    <link href="{% static 'copo/css/copo/colours.css' %}" rel="stylesheet" >
+    <link href="{% static 'copo/css/copo/buttons.css' %}" rel="stylesheet" >
     
     <!-- Icons -->
     <link rel="stylesheet" href="{% static 'copo/css/copo/icons.css' %}">
