feat(ui): Convert regular dropdown menu to a searchable dropdown
- Added ConfirmClose dialog to modals

--- a/src/apps/copo_accessions_schema/templates/copo/accessions_schema/copo_accessions_schema.html
+++ b/src/apps/copo_accessions_schema/templates/copo/accessions_schema/copo_accessions_schema.html
@@ -28,7 +28,7 @@
         <input
         type="hidden"
         id="component_subtitle"
-        value="<select id='study_id' name='studies'>{% for study in studies %}<option value='{{ study.study_id }}' title='{{study.schema_name}}: {{study.checklist_id}}' >  {{ study.study_id}} : {{study.title}} </option>{% endfor %}</select> "
+        value="<select id='study_id' class='searchable-select' name='studies'>{% for study in studies %}<option value='{{ study.study_id }}' title='{{study.schema_name}}: {{study.checklist_id}}' >  {{ study.study_id}} : {{study.title}} </option>{% endfor %}</select> "
       />
      
     </div>
