--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -23,6 +23,8 @@
           href="{% static 'copo/css/bootstrap/bootstrap-theme.css' %}">
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/bootstrap_switch/css/bootstrap-switch.css' %}">
+    <link rel="stylesheet" media="print" onload="this.media='all'"
+          href="{% static 'copo/css/bootstrap/bootstrap-select.min.css' %}">
     <link rel="stylesheet" media="print" onload="this.media='all'" href="{% static 'copo/fuelux/css/fuelux.css' %}">
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/rangeslider/rangeslider.css' %}">
@@ -62,7 +64,7 @@
     <script src="{% static 'copo/js/serialize_form_json.js' %}"></script>
     <script src="{% static 'copo/js/bootstrap.js' %}"></script>
     <script src="{% static 'copo/js/bootstrap-dialog.js' %}"></script>
-    <script src="{% static 'copo/js/bootstrap-dialog.js' %}"></script>
+    <script src="{% static 'copo/js/bootstrap-select.min.js' %}"></script>
     <script src="{% static 'copo/js/dropdowns-enhancement.js' %}"></script>
     <script src="{% static 'copo/selectize/standalone/selectize.min.js' %}"></script>
     <script src="{% static 'copo/bootstrap_switch/js/bootstrap-switch.js' %}"></script>
