Added missing style block

--- a/src/apps/copo_landing_page/templates/secondary.html
+++ b/src/apps/copo_landing_page/templates/secondary.html
@@ -11,12 +11,14 @@
 
 
 {% block css_block %}
+ <style>
     .dot-color{
     color: #eaf0f0 !important;
     }
     .navbar-brand > img {
     margin-top: -10px !important;
     }
+ </style>
 {% endblock %}
 
 
