--- a/src/apps/copo_sample/templates/copo/component_sample_spreadsheet_modal.html
+++ b/src/apps/copo_sample/templates/copo/component_sample_spreadsheet_modal.html
@@ -3,7 +3,7 @@
     <div class="modal-dialog modal-lg" role="document" style="width: 1000px">
         <div class="modal-content">
             <div class="modal-header">
-                <button id='sample_spreadsheet_close_btn1' type="button" class="close" aria-label="Close"><span
+                <button type="button" class="close sample-close-btn" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Upload {{ profile.type | upper }} Sample Spreadsheet</h4>
             </div>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="modal-footer">
-                <button id='sample_spreadsheet_close_btn2' type="button" class="btn btn-default">Close</button>
+                <button type="button" class="btn btn-default sample-close-btn">Close</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
