--- a/src/apps/copo_barcoding_submission/templates/copo/ena_taggedseq_manifest_validate.html
+++ b/src/apps/copo_barcoding_submission/templates/copo/ena_taggedseq_manifest_validate.html
@@ -51,12 +51,6 @@
         .saving_status {
             margin-right: 25px
         }
-
-        .checklist  {
-            color: black;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
     </style>
 {% endblock %}
 
@@ -81,11 +75,11 @@
     <input type="hidden" id="profile_id" value="{{ profile_id }}"/>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <p> Please upload a completed barcoding manifest to validate:</p>
-
-            <h3 class="h3">
-              <span class="checklist" >{{ checklist_id }}: {{ checklist_name }} </span>
-            </h3>
+            <p class="info-content">
+                <span class="info-text">Please upload a completed barcoding manifest to validate:</span>
+                <br><br>
+                <span class="checklist">{{ checklist_id }}: {{ checklist_name }}</span>
+            </p>
 
             <input id="file" type="file" style="display:none"/>
 
