--- a/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
+++ b/src/apps/copo_single_cell_submission/templates/copo/copo_single_cell.html
@@ -128,6 +128,14 @@ data-backdrop="static" data-keyboard="false">
 
               <input id="file" type="file" style="display:none"/>
 
+              <div class="warning-content mb-20">
+                <p>Before uploading the <span id="span_checklist" class="text-bold"></span> manifest, please upload the following prerequisite data:</p>
+                <ul>
+                  <li><strong>Data files</strong></li>
+                  <li><strong>Samples</strong></li>
+                </ul>
+              </div>
+
               <div style="display:none; margin-top: 30px; " id="warning_info" class="alert alert-info"
                   role="alert">
               </div>
