--- a/src/apps/copo_file/templates/copo/copo_files.html
+++ b/src/apps/copo_file/templates/copo/copo_files.html
@@ -111,8 +111,8 @@
                     <h4 class="modal-title">Upload File</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="alert file-size-alert-warning" role="alert">
-                        <p class="warning-content">The total <b>maximum</b> file size that can be uploaded from your local (computer) system is below <b>2 GB</b>. </p>
+                    <div class="alert file-size-alert-warning warning-content" role="alert">
+                        <p>The total <b>maximum</b> file size that can be uploaded from your local (computer) system is below <b>2 GB</b>. </p>
                     </div>
                     <p>Upload files by browsing your local system</p>
                     <input id="file" type="file" style="display:none" multiple="multiple"
