Revised welcome page message

--- a/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
+++ b/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
@@ -50,23 +50,43 @@
     <!-- getting started section -->
     <div class="row">
         <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
-             style="display: none;">
+             style="display: none;" data-tour-id="getting_started">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
                     <h3 class="copo-webui-popover-title">Getting started</h3>
                     <div class="copo-webui-popover-content">
                         <div class="webpop-content-div">
-                            This page relates to the <strong>Assembly</strong> component 
-                            (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile.
-                            Assemblies involve aligning and merging fragments of a
-                            <span class="hover-text" title="Deoxyribonucleic acid">DNA</span> sequence 
-                            to reconstruct the original structure.
-                            <br><br>
-                            <b>To add assemblies</b>: click the
-                            <button class="circular tiny ui icon primary button no-click">
-                                <i class="icon add sign"></i>
-                            </button>
-                            icon above.
+                            <p>
+                                This page relates to the <strong>Assembly</strong> component 
+                                (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile.
+                                Assemblies involve aligning and merging fragments of a
+                                <span class="hover-text" title="Deoxyribonucleic acid">DNA</span> sequence 
+                                to reconstruct the original structure.
+                            </p>
+                            <br>
+                            <p>
+                                <strong>Step 1</strong>: <strong class="text-underline">Upload prerequisite data</strong>: Before adding assemblies, upload 
+                                the following data using the icons in the navigation pane (top right):
+                                <ul>
+                                    <li><i class="ui icon blue file"></i> — for assembly <strong>data files</strong></li>
+                                    <li><i class="ui icon olive filter"></i> — for <strong>samples</strong></li>
+                                    <li><i class="ui icon orange dna"></i> — for <strong>reads</strong></li></ul>
+                                </ul>
+                            </p>
+                            <br>
+                            <p>
+                                <strong>Step 2</strong>: <strong class="text-underline">Add assemblies</strong>:
+                                Click <button class="circular tiny ui icon primary button no-click">
+                                    <i class="icon add sign"></i>
+                                </button> above to open a form to add assemblies.
+                            </p>
+                            <br>
+                            <p>
+                                <strong>Quick tour</strong>: To explore various controls on this page, click 
+                                <button class="circular tiny ui icon orange button no-click">
+                                    <i class="icon lightbulb"></i>
+                                </button> above.
+                            </p>
                         </div>
                     </div>
                 </div>
