--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -164,15 +164,26 @@
 
     <!-- Page welcome message template -->
     <div class="page-welcome-message-template">
-        <p class="msg-singlecell">Single-cell sequencing examines the nucleic acid sequence information from individual cells.</p>
-        <p class="msg-rembi">It is based on Recommended Metadata for Biological Images (REMBI) which provides guidelines for describing biological
-            images to support <span class="hover-text" title="Findable, Accessible, Interoperable, Reusable">FAIR</span> data.
-        </p>
-        <p class="msg-stx_fish">It is based on Spatial Transcriptomics using Fluorescence In Situ Hybridisation  
-            (<span style="font-style: italic;">STX FISH</span> or <span style="font-style: italic;">ST FISH</span>). 
-            This technique maps gene expression within tissue sections by visualising specific <span class="hover-text" title="Ribonucleic acid">RNA</span> 
-            molecules with fluorescent probes, preserving their spatial context.
-        </p>
+        <div class="msg-singlecell">
+            <p class="m-0">
+                Single-cell sequencing examines the nucleic acid sequence information from individual cells.
+            </p>
+        </div>
+        <div class="msg-rembi">
+            <p class="m-0">
+                It is based on Recommended Metadata for Biological Images (REMBI) which 
+                provides guidelines for describing biological images to support 
+                <span class="hover-text" title="Findable, Accessible, Interoperable, Reusable">FAIR</span> data.
+            </p>
+        </div>
+        <div class="msg-stx_fish">
+            <p>
+                It is based on Spatial Transcriptomics using Fluorescence In Situ Hybridisation  
+                (<span style="font-style: italic;">STX FISH</span> or <span style="font-style: italic;">ST FISH</span>). 
+                This technique maps gene expression within tissue sections by visualising specific <span class="hover-text" title="Ribonucleic acid">RNA</span> 
+                molecules with fluorescent probes, preserving their spatial context.
+            </p>
+        </div>
     </div>
 
     <!-- Quick tour template -->
