--- a/src/apps/copo_core/templates/copo/metadata_templates.html
+++ b/src/apps/copo_core/templates/copo/metadata_templates.html
@@ -37,7 +37,7 @@
 
     <!-- getting started section -->
     <div class="row">
-        <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;">
+        <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;" data-tour-id="getting_started">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
                     <h3 class="copo-webui-popover-title">Getting Started</h3>
@@ -52,12 +52,11 @@
                                 <i class="icon add sign"></i>
                             </button>
                             to start.
-                            <div><strong>Quick Tour: </strong>To explore the various
-                                controls available on this page, click the
+                            <div><strong>Quick tour: </strong>To explore the various
+                                controls available on this page, click 
                                 <button class="circular tiny ui icon orange button">
                                     <i class="icon lightbulb"></i>
-                                </button>
-                                icon.
+                                </button>.
                             </div>
                         </div>
                     </div>
