--- a/src/apps/copo_file/templates/copo/copo_files.html
+++ b/src/apps/copo_file/templates/copo/copo_files.html
@@ -132,7 +132,7 @@
     <!-- getting started section -->
     <div class="row">
         <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
-             style="display: none;">
+             style="display: none;" data-tour-id="getting_started">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
                     <h3 class="copo-webui-popover-title">Getting started</h3>
@@ -143,18 +143,18 @@
                             The following are ways to upload data files:
                             <ol>
                                 <li>
-                                    <b>From your local (computer) system</b>: click the
+                                    <b>From your local (computer) system</b>: click 
                                     <button class="circular tiny ui icon primary button no-click">
                                         <i class="icon desktop sign"></i>
                                     </button>
-                                    icon above.
+                                    above.
                                 </li>
                                 <li>
-                                    <b>Via the terminal</b>: click the
+                                    <b>Via the terminal</b>: click 
                                     <button class="circular tiny ui icon primary button no-click">
                                         <i class="icon terminal sign"></i>
                                     </button>
-                                    icon above. 
+                                    above. 
                                     <br>Files can be uploaded from a 
                                     <span class="hover-text" title="High-performance computing">HPC</span> 
                                     cluster. Use a Slurm job with the HPC scheduler when uploading from the cluster.
