--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -90,7 +90,7 @@
 
     <!-- getting started section -->
     <div class="row">
-        <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;">
+        <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;"  data-tour-id="getting_started">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
                     <h3 class="copo-webui-popover-title">Getting started</h3>
@@ -105,11 +105,11 @@
                                         your research project or study.
                                     </p>
                                     <p><b>To create a new profile</b>:
-                                        Choose a profile type from the dropdown menu above. Then, click the
+                                        Choose a profile type from the dropdown menu above. Then, click 
                                         <button class="circular tiny ui icon primary button no-click">
                                             <i class="icon add sign"></i>
                                         </button>
-                                        button next to it to create a profile.
+                                        next to it to create a profile.
                                     </p>
                                     
                                     <p><i class='fa fa-info-circle'></i>If your desired profile type is not listed, please
@@ -125,11 +125,11 @@
                                 </li>
                                 <li>
                                     <strong>Quick tour</strong>
-                                    <p>To explore various controls on this page, click the
+                                    <p>To explore various controls on this page, click 
                                         <button class="circular tiny ui icon orange button no-click">
                                             <i class="icon lightbulb"></i>
                                         </button>
-                                        button above.
+                                        above.
                                     </p>
                                 </li>
                             </ol>
