--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -70,40 +70,50 @@
 <div class="row">
   <div
     class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
-    style="display: none"
+    style="display: none" data-tour-id="getting_started"
   >
     <div class="copo-webui-popover">
       <div class="webui-popover-inner">
         <h3 class="copo-webui-popover-title">Getting started</h3>
         <div class="copo-webui-popover-content">
           <div class="webpop-content-div">
-            This page relates to the <strong>Reads</strong> component 
-            (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile. 
-            Reads relate to <span style="font-style: italic;">run</span> and <span style="font-style: italic;">experiment</span> data.
-            <br><br>
-            <div>
-              <strong>Download blank manifest</strong>: Select the desired checklist from the dropdown menu above then, click the
+            <p>
+              This page relates to the <strong>Reads</strong> component 
+              (<i id="componentIcon" class="ui icon" aria-hidden="true"></i>) of a profile. 
+              Reads relate to <span style="font-style: italic;">run</span> and <span style="font-style: italic;">experiment</span> data.
+           </p>
+            <br>
+            <p>
+              <strong>Step 1</strong>: <strong class="text-underline">Upload prerequisite data</strong>: Before adding reads, upload 
+              the prerequisite data using  the icons in the navigation pane (top right):
+              <ul>
+                <li><i class="ui icon blue file"></i> — for reads <strong>data files</strong></li>
+                <li><i class="ui icon olive filter"></i> — for <strong>samples</strong></li>
+              </ul>
+            </p>
+            <br>
+            <p>
+              <strong>Step 2</strong>: <strong class="text-underline">Download blank manifest</strong>: Select the desired checklist  
+              from the dropdown menu above then, click 
               <button class="circular tiny ui icon brown button no-click">
                   <i class="icon download sign"></i>
-              </button>
-              button next to it to download a blank manifest.
-            </div>
-            <br><br>
-            <div>
-              <strong>Upload completed manifest</strong>: After having completed the manifest, 
-              choose the matching checklist option from the dropdown menu then, click the
+              </button>  next to it to download a blank manifest.
+            </p>
+            <br>
+            <p>
+              <strong>Step 3</strong>: <strong class="text-underline">Upload completed manifest</strong>: After having completed the manifest, 
+              choose the matching checklist option from the dropdown menu then, click 
               <button id="help_add_button" class="circular tiny ui icon button no-click">
                   <i class="icon table sign"></i>
-              </button>
-              button to upload it.
-            </div>
-            <!--<div>
-              <strong>Quick tour</strong>: To explore various controls on this page, click the
+              </button> to upload it.
+            </p>
+            <br>
+            <p>
+              <strong>Quick tour</strong>: To explore various controls on this page, click 
               <button class="circular tiny ui icon orange button no-click">
                   <i class="icon lightbulb"></i>
-              </button>
-              button.
-            </div>-->
+              </button> above.
+            </p>
           </div>
         </div>
       </div>
