--- a/src/apps/copo_sample/templates/copo/copo_general_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_general_sample.html
@@ -72,7 +72,7 @@
 <div class="row">
   <div
     class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
-    style="display: none"
+    style="display: none" data-tour-id="getting_started"
   >
     <div class="copo-webui-popover">
       <div class="webui-popover-inner">
@@ -93,11 +93,11 @@
             <br>
             <div>
               <strong>Upload completed manifest</strong>: After having completed the manifest, 
-              choose the matching checklist option from the dropdown menu then, click the
+              choose the matching checklist option from the dropdown menu then, click 
               <button id="help_add_button" class="circular tiny ui icon button no-click">
                   <i class="icon table sign"></i>
               </button>
-              button to upload it.
+              to upload it.
             </div>
             <!--<div>
               <strong>Quick tour</strong>: To explore various controls on this page, click the
