--- a/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
+++ b/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
@@ -62,7 +62,7 @@
     <div style="margin-top: 15px;">
         <!-- getting started section -->
         <div class="row">
-            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;">
+            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;" data-tour-id="getting_started">
                 <div class="copo-webui-popover">
                     <div class="webui-popover-inner">
                         <h3 class="copo-webui-popover-title">Getting started</h3>
@@ -78,11 +78,10 @@
                                 {% if showAllCOPOAccessions is False %}
                                 <br><br>
                                 <div><strong>All COPO accessions: </strong>To explore all accessions on COPO,
-                                    click the
+                                    click 
                                     <button class="circular tiny ui icon pink button no-click">
                                         <i class="icon sitemap"></i>
-                                    </button>
-                                    icon above.
+                                    </button> above.
                                 </div>
                                 {% endif %}
                             </div>
