--- a/src/apps/copo_accessions_schema/templates/copo/accessions_schema/copo_accessions_schema.html
+++ b/src/apps/copo_accessions_schema/templates/copo/accessions_schema/copo_accessions_schema.html
@@ -77,7 +77,7 @@
     <!-- getting started section -->
     <div class="row">
         <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
-             style="display: none;">
+             style="display: none;" data-tour-id="getting_started">
             <div class="copo-webui-popover">
                 <div class="webui-popover-inner">
                     <h3 class="copo-webui-popover-title">Getting started</h3>
