--- a/src/apps/copo_sample/templates/copo/copo_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_sample.html
@@ -208,7 +208,7 @@
         <!-- getting started section -->
         <div class="row">
             <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
-                 style="display: none;">
+                 style="display: none;" data-tour-id="getting_started">
                 <div class="copo-webui-popover">
                     <div class="webui-popover-inner">
                         <h3 class="copo-webui-popover-title">Getting started</h3>
@@ -220,27 +220,27 @@
                                 Samples represent units of biomaterial usually associated with single collection events.
                                 <br><br>
                                 <div>
-                                    <strong>Download blank manifest</strong>: Click the
+                                    <strong>Download blank manifest</strong>: Click 
                                     <button class="circular tiny ui icon brown button no-click">
                                         <i class="icon download sign"></i>
                                     </button>
-                                    button above to download a blank manifest template.  
+                                    above to download a blank manifest template.  
                                 </div>
                                 <br>
                                 <div>
-                                    <strong>Upload completed manifest</strong>: After having completed the manifest, click the
+                                    <strong>Upload completed manifest</strong>: After having completed the manifest, click 
                                     <button id="help_add_button" class="circular tiny ui icon button no-click">
                                         <i class="icon table sign"></i>
                                      </button>
-                                    button above to upload it.
+                                    above to upload it.
                                 </div>
                                 <br>
                                 <div>
-                                    <strong>Quick tour</strong>: To explore various controls on this page, click the
+                                    <strong>Quick tour</strong>: To explore various controls on this page, click 
                                     <button class="circular tiny ui icon orange button no-click">
                                         <i class="icon lightbulb"></i>
                                     </button>
-                                    button above.
+                                    above.
                                 </div>
                             </div>
                         </div>
